--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2024 Your Company. All Rights Reserved.</p>
+    <p>© 2024 Fanus Digital. All Rights Reserved.</p>
   </footer>
 
   <!-- Include your data and script in the correct order -->
