--- a/update-timeline.html
+++ b/update-timeline.html
@@ -38,7 +38,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2024 Your Company. All rights reserved.</p>
+    <p>&copy; 2024 Fanus Digital. All rights reserved.</p>
   </footer>
 
   <!-- Include your original timelineData.js file -->
