Convert to web app with backend and add admin authentication

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- Header -->
   <header>
     <h1>Project Showcase</h1>
+    <nav>
+      <a href="admin.html">Admin</a>
+    </nav>
   </header>
 
   <!-- Main content area -->
@@ -33,8 +36,9 @@
     <p>© 2024 Fanus Digital. All Rights Reserved.</p>
   </footer>
 
-  <!-- Include your data and script in the correct order -->
+  <!-- Include data.js as a fallback -->
   <script src="data.js"></script>
+  <!-- Main script -->
   <script src="script.js"></script>
 </body>
 </html>
