--- a/update-timeline.html
+++ b/update-timeline.html
@@ -9,13 +9,17 @@
 <body>
   <header>
     <h1>Update Timeline Data</h1>
+    <nav>
+      <a href="index.html">View Projects</a>
+      <a href="admin.html">Admin</a>
+    </nav>
   </header>
 
   <main>
     <div class="info">
       <p>
         This page lets you update the <strong>timelineData</strong> JSON. Edits are done 
-        in real-time. Click <em>Save / Export</em> to see your updated JSON and copy it if needed.
+        in real-time. Click <em>Save / Export</em> to save changes to the server and see your updated JSON.
       </p>
     </div>
 
@@ -41,7 +45,7 @@
     <p>&copy; 2024 Fanus Digital. All rights reserved.</p>
   </footer>
 
-  <!-- Include your original timelineData.js file -->
+  <!-- Include timelineData.js as a fallback -->
   <script src="timelineData.js"></script>
 
   <!-- Script that dynamically renders and updates the timeline data -->
